# brainless_prompts

./: .gitignore  Cargo.toml  artpromptgenerator-769e1c382c8a1bf0.js  artpromptgenerator-769e1c382c8a1bf0_bg.wasm  index.html
.github/workflows/: deploy.yml
snippets/dioxus-interpreter-js-cf9fba3dff59a7e7/: inline0.js
src/: adjectives.txt  colors.txt  main.rs  nouns.txt  prepositions.txt  style.css  verbs.txt
