[package]
name = "artpromptgenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.0"
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Navigator", "Window", "Clipboard"] }
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.3.0"


